@@ -5,9 +5,9 @@ import java.io.File;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import baubles.api.cap.BaublesCapabilities.CapabilityBaubles;
 import baubles.api.cap.BaublesContainer;
 import baubles.api.cap.IBaublesItemHandler;
+import baubles.api.cap.BaublesCapabilities.CapabilityBaubles;
 import baubles.common.event.CommandBaubles;
 import baubles.common.event.EventHandlerEntity;
 import baubles.common.network.PacketHandler;
